Change the background image css and set the form parent

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <title>Form 1</title>
-   
 </head>
 <body>
-    
+    <div id="container">
+        <div id="content">
+        
+        </div>
+    </div>
+   
 </body>
 </html>
